# kokiri

./: .gitmodules  CMakeLists.txt  toolchain.cmake
CMSIS/: CMakeLists.txt
CMSIS/DSP/Source/: CMakeLists.txt
CMSIS/DSP/Source/CommonTables/: CommonTables.cmake
CMSIS/DSP/Source/ComplexMathFunctions/: ComplexMathFunctions.cmake
CMSIS/DSP/Source/ControllerFunctions/: ControllerFunctions.cmake
CMSIS/DSP/Source/DistanceFunctions/: DistanceFunctions.cmake
CMSIS/DSP/Source/FastMathFunctions/: FastMathFunctions.cmake
CMSIS/DSP/Source/FilteringFunctions/: FilteringFunctions.cmake
CMSIS/DSP/Source/TransformFunctions/: TransformFunctions.cmake
