cmake_minimum_required(VERSION 3.6)

set(CMAKE_BUILD_TYPE MINSIZEREL)
set(PROJ_DIR ${CMAKE_CURRENT_LIST_DIR})
set(BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR})
set(CMAKE_INSTALL_PREFIX ${PROJ_DIR}/release CACHE STRING "")
set(CMAKE_TOOLCHAIN_FILE ${PROJ_DIR}/toolchain.cmake)

project(kokiri VERSION 0.0 LANGUAGES C CXX ASM)

if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
	message(FATAL_ERROR "In-source build is not allowed, please use a separate build folder.")
endif()

# Build Arm CMSIS DSP library

# We fake this function, because we already do the work it
#  claims to do, and we don't want it overwriting that
function(compilerSpecificCompileOptions PROJECTNAME)
endfunction()

add_subdirectory(${PROJ_DIR}/CMSIS)


# LLVM Compiler Runtime
set(COMPILER_RT_OS_DIR					"compiler-rt"	CACHE STRING "")
set(COMPILER_RT_BUILD_BUILTINS			ON				CACHE BOOL "")
set(COMPILER_RT_BUILD_SANITIZERS		OFF				CACHE BOOL "")
set(COMPILER_RT_BUILD_XRAY				OFF				CACHE BOOL "")
set(COMPILER_RT_BUILD_LIBFUZZER			OFF				CACHE BOOL "")
set(COMPILER_RT_BUILD_PROFILE			OFF				CACHE BOOL "")
set(COMPILER_RT_BAREMETAL_BUILD			ON				CACHE BOOL "")
set(COMPILER_RT_DEFAULT_TARGET_ONLY		ON				CACHE BOOL "")
set(COMPILER_RT_INCLUDE_TESTS			OFF				CACHE BOOL "")

add_subdirectory(${PROJ_DIR}/compiler-rt)

set(MUSL_LGCC 							"-lcompiler-rt" CACHE STRING "")
add_subdirectory(${PROJ_DIR}/musl)

# set(BEARSSL_ENABLE_MD5					ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SHA1					ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SHA224				ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SHA256				ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SHA384				ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SHA512				ON CACHE BOOL "")

# set(BEARSSL_ENABLE_AES_BIG_CBCDEC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_AES_BIG_CBCENC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_AES_BIG_CTR		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_AES_CT_CBCDEC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_AES_CT_CBCENC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_AES_CT_CTR		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_AES_CT64_CBCDEC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_AES_CT64_CBCENC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_AES_CT64_CTR		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_AES_PWR8_CBCDEC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_AES_PWR8_CBCENC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_AES_PWR8_CTR		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_AES_SMALL_CBCDEC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_AES_SMALL_CBCENC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_AES_SMALL_CTR		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_AES_X86NI_CBCDEC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_AES_X86NI_CBCENC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_AES_X86NI_CTR		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_CHACHA20_CT		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_DES_CT_CBCDEC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_DES_CT_CBCENC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_DES_TAB_CBCDEC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_DES_TAB_CBCENC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_EC_ALL_M15		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_EC_ALL_M31		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_EC_C25519_I15		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_EC_C25519_I31		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_EC_C25519_M15		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_EC_C25519_M31		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_EC_P256_M15		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_EC_P256_M31		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_EC_PRIME_I15		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_EC_PRIME_I31		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_ECDSA_I15_SIGN		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_ECDSA_I15_VRFY		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_ECDSA_I31_SIGN		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_ECDSA_I31_VRFY		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_GHASH_CTMUL		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_GHASH_CTMUL32		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_GHASH_CTMUL64		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_GHASH_PCLMUL		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_GHASH_PWR8		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_MD5		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_POLY1305_CTMUL		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_POLY1305_CTMUL32		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_POLY1305_CTMULQ		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_POLY1305_I15		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_RSA_I15_PKCS1_SIGN		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_RSA_I15_PKCS1_VRFY		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_RSA_I15_PRIV		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_RSA_I15_PUB		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_RSA_I31_PKCS1_SIGN		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_RSA_I31_PKCS1_VRFY		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_RSA_I31_PRIV		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_RSA_I31_PUB		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_RSA_I32_PKCS1_SIGN		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_RSA_I32_PKCS1_VRFY		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_RSA_I32_PRIV		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_RSA_I32_PUB		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_RSA_I62_PKCS1_SIGN		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_RSA_I62_PKCS1_VRFY		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_RSA_I62_PRIV		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_RSA_I62_PUB		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SHA1		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SHA224		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SHA256		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SHA384		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SHA512		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SSL_CLIENT		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SSL_CCERT_EC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SSL_CCERT_RSA		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SSL_SERVER		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SSL_SCERT_EC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SSL_SCERT_RSA		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SSLREC_CBC		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SSLREC_CHAPOL		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_SSLREC_GCM		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_PRF_TLS10		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_PRF_TLS12_SHA256		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_PRF_TLS12_SHA384		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_X509_KNOWNKEY		ON CACHE BOOL "")
# set(BEARSSL_ENABLE_X509_MINIMAL		ON CACHE BOOL "")

set(BEARSSL_ENABLE_SHA256				ON CACHE BOOL "")
set(BEARSSL_ENABLE_EC_C25519_I31		ON CACHE BOOL "")
set(BEARSSL_ENABLE_AES_CT_CTR			ON CACHE BOOL "")
set(BEARSSL_ENABLE_GHASH_CTMUL32		ON CACHE BOOL "")
set(BEARSSL_ENABLE_SSL_CLIENT			ON CACHE BOOL "")
set(BEARSSL_ENABLE_SSLREC_GCM			ON CACHE BOOL "")
set(BEARSSL_ENABLE_PRF_TLS12_SHA256		ON CACHE BOOL "")
set(BEARSSL_ENABLE_X509_KNOWNKEY		ON CACHE BOOL "")

add_subdirectory(${PROJ_DIR}/BearSSL)
